Title Wrap issue fix

--- a/src/main/Shared/Accordion/accordion.scss
+++ b/src/main/Shared/Accordion/accordion.scss
@@ -16,7 +16,6 @@
         padding-right:35px;
         color:#333;
         text-decoration:none;
-        white-space:nowrap;
         -webkit-user-select:none;
         -moz-user-select:none;
         -ms-user-select:none;
